--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -29,6 +29,13 @@ $darkColor: #333;
 
 
 //Media Query Mixins
+@mixin mediaXSm {
+    @media screen and (max-width: 400px) {
+        @content;
+    }
+}
+
+
 @mixin mediaSm {
     @media screen and (max-width: 500px) {
         @content;
