--- a/scss/style.scss
+++ b/scss/style.scss
@@ -261,25 +261,26 @@ main {
     justify-content: center;
     align-items: center;
 
-    button.btn {
-        border: 4PX solid #BC8CCD;
-        border-top-color: #BC8CCD;
-        border-bottom-color: #72A5BA;
-        display: block;
-        font-style: normal;
-        font-weight: normal;
-        line-height: normal;
-        text-align: center;
-        color: #557C8C;
-        text-decoration: none;
-        background: transparent;
-        margin: 0;
 
-        &:hover {
-            background: linear-gradient(to bottom, #BC8CCD 0%, #72A5BA 100%);
-            @include easeOut;
-        }
-    }
+    // button.btn {
+    //     border: 4PX solid #BC8CCD;
+    //     border-top-color: #BC8CCD;
+    //     border-bottom-color: #72A5BA;
+    //     display: block;
+    //     font-style: normal;
+    //     font-weight: normal;
+    //     line-height: normal;
+    //     text-align: center;
+    //     color: #557C8C;
+    //     text-decoration: none;
+    //     background: transparent;
+    //     margin: 0;
+
+    //     &:hover {
+    //         background: linear-gradient(to bottom, #BC8CCD 0%, #72A5BA 100%);
+    //         @include easeOut;
+    //     }
+    // }
 
     .threeCards {
         margin: 1.5rem auto auto 0;
@@ -299,6 +300,30 @@ main {
             border-radius: 50px;
             color: #333333;
             text-align: center;
+
+
+
+
+            &:nth-child(1) {
+                .cardParag {
+                    padding-bottom: 4rem;
+                }
+            }
+
+
+            &:nth-child(2) {
+                .cardParag {
+                    padding-bottom: 0.5rem;
+                }
+            }
+
+
+            &:nth-child(3) {
+                .cardParag {
+                    padding-bottom: 7rem;
+                }
+            }
+
 
             h3 {
                 margin: 20px 0 0 0;
@@ -322,7 +347,8 @@ main {
                 color: #6D6D6D;
             }
 
-            button {
+            a.cardSvgButton {
+                display: block;
                 color: #557C8C;
                 font-size: 15px;
                 position: relative;
@@ -333,7 +359,58 @@ main {
                 -moz-border-radius: 28px;
                 -ms-border-radius: 28px;
                 -o-border-radius: 28px;
+                position: relative;
+                z-index: 0;
+                font-style: normal;
+                font-weight: normal;
+                line-height: normal;
+                text-align: center;
+                text-decoration: none;
+
+
+                .icon {
+                    position: absolute;
+                    top: 0px;
+                    left: 0px;
+                    height: 100%;
+                    width: 100%;
+                    z-index: -1;
+
+
+                    path {
+                        transition: opacity 0.4s ease;
+
+                        &:first-of-type {
+                            fill: transparent;
+                            stroke: url(#linearGradient-1);
+                            stroke-width: 3;
+                            opacity: 1;
+                        }
+
+                        &.icon--plain {
+                            opacity: 0;
+                            stroke: none;
+                            stroke-width: 0;
+                        }
+                    }
+                }
+
+                &:hover {
+                    @include easeOut;
+
+                    path {
+                        &:first-of-type {
+                            opacity: 0;
+
+                        }
+
+                        &.icon--plain {
+                            opacity: 1;
+                        }
+                    }
+                }
             }
+
         }
 
     }
@@ -437,7 +514,8 @@ main {
                 color: #6D6D6D;
             }
 
-            button {
+            a.cardSvgButton {
+                display: block;
                 color: #557C8C;
                 font-size: 15px;
                 position: relative;
@@ -448,7 +526,58 @@ main {
                 -moz-border-radius: 37px;
                 -ms-border-radius: 37px;
                 -o-border-radius: 37px;
+                position: relative;
+                z-index: 0;
+                font-style: normal;
+                font-weight: normal;
+                line-height: normal;
+                text-align: center;
+                text-decoration: none;
+
+
+                .icon {
+                    position: absolute;
+                    top: 0px;
+                    left: 0px;
+                    height: 100%;
+                    width: 100%;
+                    z-index: -1;
+
+
+                    path {
+                        transition: opacity 0.4s ease;
+
+                        &:first-of-type {
+                            fill: transparent;
+                            stroke: url(#linearGradient-1);
+                            stroke-width: 3;
+                            opacity: 1;
+                        }
+
+                        &.icon--plain {
+                            opacity: 0;
+                            stroke: none;
+                            stroke-width: 0;
+                        }
+                    }
+                }
+
+                &:hover {
+                    @include easeOut;
+
+                    path {
+                        &:first-of-type {
+                            opacity: 0;
+
+                        }
+
+                        &.icon--plain {
+                            opacity: 1;
+                        }
+                    }
+                }
             }
+
         }
 
     }
@@ -476,7 +605,7 @@ footer {
         color: #FFFFFF;
 
         .footerTop {
-            display: flex;
+            display: flex flex;
 
             a {
                 color: #FFFFFF;
