--- a/css/style.css
+++ b/css/style.css
@@ -1240,3 +1240,57 @@ body#Услуги footer {
 
 section.two h2 {
   font-size: 28px; }
+
+@media screen and (max-width: 320px) {
+  .headerImage h1 {
+    font-size: 32px; }
+  main {
+    width: 100%; }
+    main h2 {
+      font-size: 28px; } }
+
+@media screen and (max-width: 720px) and (orientation: landscape) {
+  .headerImage h1 {
+    padding-top: calc(100vh - 90vh);
+    margin: 0 20px 0 0;
+    font-size: 32px;
+    float: right;
+    text-align: left; }
+  .headerImage a#svgButton {
+    margin: 10% 0 0 20px;
+    position: relative;
+    z-index: 0;
+    float: left; }
+  main h2 {
+    font-size: 30px; } }
+
+@media screen and (max-width: 830px) and (orientation: landscape) {
+  .headerImage h1 {
+    padding-top: calc(100vh - 80vh);
+    margin: 0 50px 0 0;
+    font-size: 38px;
+    float: right;
+    text-align: left; }
+  .headerImage a#svgButton {
+    margin: 18% 0 0 60px;
+    position: relative;
+    z-index: 0;
+    float: left; }
+  main h2 {
+    font-size: 30px; } }
+
+@media screen and (max-width: 720px) and (orientation: landscape) {
+  .headerImage h1 {
+    padding-top: calc(100vh - 90vh);
+    margin: 0 10px 0 0;
+    font-size: 30px;
+    float: right;
+    text-align: left; }
+  .headerImage a#svgButton {
+    margin: 15% 0 0 20px;
+    position: relative;
+    z-index: 0;
+    float: left;
+    font-size: 16px; }
+  main h2 {
+    font-size: 30px; } }
