--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -1093,3 +1093,120 @@ section.two {
         font-size: 28px;
     }
 }
+
+@include mediaXXSm {
+
+    .headerImage {
+        h1 {
+            font-size: 32px;
+        }
+    }
+
+    main {
+        width: 100%;
+
+        h2 {
+            font-size: 28px;
+        }
+    }
+}
+
+@include mediaLandscape {
+
+    .headerImage {
+        h1 {
+            padding-top: calc(100vh - 90vh);
+            margin: 0 20px 0 0;
+            font-size: 32px;
+            float: right;
+            text-align: left;
+        }
+
+
+
+
+
+        a#svgButton {
+            margin: 10% 0 0 20px;
+            position: relative;
+            z-index: 0;
+            float: left;
+        }
+
+    }
+
+
+    main {
+
+        h2 {
+            font-size: 30px;
+        }
+    }
+}
+
+@include mediaXlLandscape {
+
+    .headerImage {
+        h1 {
+            padding-top: calc(100vh - 80vh);
+            margin: 0 50px 0 0;
+            font-size: 38px;
+            float: right;
+            text-align: left;
+        }
+
+
+
+
+
+        a#svgButton {
+            margin: 18% 0 0 60px;
+            position: relative;
+            z-index: 0;
+            float: left;
+        }
+
+    }
+
+
+    main {
+
+        h2 {
+            font-size: 30px;
+        }
+    }
+}
+
+@include mediaLandscape {
+
+    .headerImage {
+        h1 {
+            padding-top: calc(100vh - 90vh);
+            margin: 0 10px 0 0;
+            font-size: 30px;
+            float: right;
+            text-align: left;
+        }
+
+
+
+
+
+        a#svgButton {
+            margin: 15% 0 0 20px;
+            position: relative;
+            z-index: 0;
+            float: left;
+            font-size: 16px;
+        }
+
+    }
+
+
+    main {
+
+        h2 {
+            font-size: 30px;
+        }
+    }
+}
