--- a/css/style.css
+++ b/css/style.css
@@ -16,9 +16,10 @@ html {
 body {
   background-color: #F5F5F5;
   color: #000000;
-  width: 95%;
+  width: 100%;
   height: 100%;
-  padding: 1rem auto; }
+  padding: 1rem auto;
+  overflow-x: hidden; }
 
 h1 {
   font-family: "Inter UI", "Roboto", sans-serif;
@@ -186,7 +187,7 @@ header {
         .headerImage a#svgButton .icon path:first-of-type {
           fill: transparent;
           stroke: url(#linearGradient-1);
-          stroke-width: 3;
+          stroke-width: 5;
           opacity: 1; }
         .headerImage a#svgButton .icon path.icon--plain {
           opacity: 0;
@@ -620,6 +621,8 @@ body#Услуги footer {
         opacity: 0; }
       .headerImage a#svgButton:hover path.icon--plain {
         opacity: 1; }
+  .footerContainer .footerTop .text {
+    text-align: center; }
   body#Услуги .headerImage {
     background-image: linear-gradient(rgba(44, 94, 142, 0.01), rgba(44, 94, 142, 0.3)), url("../img/Услуги_header_background.png");
     display: block;
@@ -803,9 +806,9 @@ body#Услуги footer {
       margin: 0 10px 0 28px; }
   main section.one h2 {
     font-size: 28px; }
-  section.two h2 {
+  main section.two h2 {
     font-size: 28px; }
-  .socials {
+  main .socials {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(130px, 1fr));
     grid-gap: 15px;
@@ -813,16 +816,16 @@ body#Услуги footer {
     text-align: center;
     margin: 65px auto 0 auto;
     justify-content: center; }
-    .socials .socialMedia {
+    main .socials .socialMedia {
       margin: 1rem; }
-    .socials .roundedBorders {
+    main .socials .roundedBorders {
       font-size: 14px;
       margin: 14px auto 0 auto;
       padding: 7px 9px;
       border: 1px solid #C4C4C4;
       box-sizing: border-box;
       border-radius: 30px; }
-  section.three h2 {
+  main section.three h2 {
     font-size: 28px; }
   footer {
     display: block; }
@@ -833,6 +836,7 @@ body#Услуги footer {
       justify-content: center;
       color: #FFFFFF; }
       footer .footerContainer .footerTop {
+        text-align: center;
         display: block; }
         footer .footerContainer .footerTop a {
           color: #FFFFFF; }
@@ -841,7 +845,7 @@ body#Услуги footer {
           margin-right: 1rem; }
         footer .footerContainer .footerTop .text {
           margin-top: 2.5rem;
-          text-align: left; }
+          text-align: center; }
       footer .footerContainer .supportOptions {
         display: grid;
         margin: 1rem auto;
@@ -874,56 +878,6 @@ body#Услуги footer {
       text-align: right; }
       body#Услуги .headerImage h1 b {
         font-size: 42px; }
-    body#Услуги .headerImage button.btn {
-      float: right;
-      border: none;
-      display: block;
-      padding: 24px 34px;
-      font-style: normal;
-      font-weight: normal;
-      line-height: normal;
-      text-align: center;
-      letter-spacing: 0.1em;
-      color: #ffffff;
-      text-decoration: none;
-      background: #2C5E8E;
-      border-radius: 50px;
-      -webkit-border-radius: 50px;
-      -moz-border-radius: 50px;
-      -ms-border-radius: 50px;
-      -o-border-radius: 50px;
-      margin: 0 18px 0 0;
-      margin-top: .5rem;
-      justify-self: center; }
-  body#Услуги main section.one h2 {
-    font-size: 28px; }
-  body#Услуги section.two h2 {
-    font-size: 28px; }
-  body#Услуги section.three h2 {
-    font-size: 28px; }
-  body#Услуги .headerImage {
-    background-image: linear-gradient(rgba(44, 94, 142, 0.01), rgba(44, 94, 142, 0.3)), url("../img/Услуги_header_background.png");
-    display: block;
-    justify-content: center;
-    align-items: center;
-    text-align: center; }
-    body#Услуги .headerImage .headerImageInner {
-      display: block;
-      float: right;
-      justify-content: center;
-      align-items: center;
-      text-align: right;
-      padding: 0 auto; }
-    body#Услуги .headerImage h1 {
-      margin: 0 px 0 0;
-      padding: 12rem 0 0 0;
-      background-image: none;
-      -webkit-background-clip: none;
-      -webkit-text-fill-color: #000000;
-      color: #000000;
-      text-align: right; }
-      body#Услуги .headerImage h1 b {
-        font-size: 60px; }
     body#Услуги .headerImage button.btn {
       float: right;
       border: none;
@@ -1114,7 +1068,8 @@ body#Услуги footer {
       justify-content: center;
       color: #FFFFFF; }
       footer .footerContainer .footerTop {
-        display: block; }
+        display: block;
+        text-align: center; }
         footer .footerContainer .footerTop a {
           color: #FFFFFF; }
         footer .footerContainer .footerTop img {
@@ -1122,7 +1077,7 @@ body#Услуги footer {
           margin-right: 1rem; }
         footer .footerContainer .footerTop .text {
           margin-top: 2.5rem;
-          text-align: left; }
+          text-align: center; }
       footer .footerContainer .supportOptions {
         display: grid;
         grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
@@ -1236,20 +1191,25 @@ body#Услуги footer {
       padding: 0.5rem 0;
       margin: 0 10px 0 26px; }
   section.one h2 {
-    font-size: 28px; } }
+    font-size: 28px; }
+  section.two h2 {
+    font-size: 28px; }
+  footer {
+    text-align: center; } }
 
-section.two h2 {
-  font-size: 28px; }
-
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 400px) and (max-width: 320px) {
   .headerImage h1 {
     font-size: 32px; }
-  main {
+  main h2 {
+    font-size: 28px; }
+  body#Услуги .headerImage h1 {
+    font-size: 32px; }
+  body#Услуги main {
     width: 100%; }
-    main h2 {
+    body#Услуги main h2 {
       font-size: 28px; } }
 
-@media screen and (max-width: 720px) and (orientation: landscape) {
+@media screen and (max-width: 400px) and (max-width: 720px) and (orientation: landscape) {
   .headerImage h1 {
     padding-top: calc(100vh - 90vh);
     margin: 0 20px 0 0;
@@ -1262,9 +1222,24 @@ section.two h2 {
     z-index: 0;
     float: left; }
   main h2 {
+    font-size: 30px; }
+  body#Услуги .headerImage h1 {
+    padding-top: calc(100vh - 90vh);
+    margin: 0 20px 0 0;
+    font-size: 32px;
+    float: right;
+    text-align: left; }
+    body#Услуги .headerImage h1 b {
+      font-size: 38px; }
+  body#Услуги .headerImage a#svgButton {
+    margin: 10% 0 0 20px;
+    position: relative;
+    z-index: 0;
+    float: left; }
+  body#Услуги main h2 {
     font-size: 30px; } }
 
-@media screen and (max-width: 830px) and (orientation: landscape) {
+@media screen and (max-width: 400px) and (max-width: 830px) and (orientation: landscape) {
   .headerImage h1 {
     padding-top: calc(100vh - 80vh);
     margin: 0 50px 0 0;
@@ -1272,14 +1247,29 @@ section.two h2 {
     float: right;
     text-align: left; }
   .headerImage a#svgButton {
-    margin: 18% 0 0 60px;
+    margin: 18% 0 0 0;
     position: relative;
     z-index: 0;
     float: left; }
   main h2 {
+    font-size: 30px; }
+  body#Услуги .headerImage h1 {
+    padding-top: calc(100vh - 80vh);
+    margin: 0 50px 0 0;
+    font-size: 38px;
+    float: right;
+    text-align: left; }
+    body#Услуги .headerImage h1 b {
+      font-size: 48px; }
+  body#Услуги .headerImage a#svgButton {
+    margin: 18% 0 0 60px;
+    position: relative;
+    z-index: 0;
+    float: left; }
+  body#Услуги main h2 {
     font-size: 30px; } }
 
-@media screen and (max-width: 720px) and (orientation: landscape) {
+@media screen and (max-width: 400px) and (max-width: 720px) and (orientation: landscape) {
   .headerImage h1 {
     padding-top: calc(100vh - 90vh);
     margin: 0 10px 0 0;
@@ -1293,4 +1283,20 @@ section.two h2 {
     float: left;
     font-size: 16px; }
   main h2 {
+    font-size: 30px; }
+  body#Услуги .headerImage h1 {
+    padding-top: calc(100vh - 90vh);
+    margin: 0 10px 0 0;
+    font-size: 30px;
+    float: right;
+    text-align: left; }
+    body#Услуги .headerImage h1 b {
+      font-size: 35.5px; }
+  body#Услуги .headerImage a#svgButton {
+    margin: 15% 0 0 20px;
+    position: relative;
+    z-index: 0;
+    float: left;
+    font-size: 16px; }
+  body#Услуги main h2 {
     font-size: 30px; } }
