--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -5,6 +5,7 @@
 
     .footerContainer {
         max-width: 1100px;
+
     }
 }
 
@@ -79,6 +80,14 @@
             }
         }
 
+    }
+
+    .footerContainer {
+        .footerTop {
+            .text {
+                text-align: center;
+            }
+        }
     }
 
     body#Услуги {
@@ -374,41 +383,42 @@
                 font-size: 28px;
             }
         }
-    }
 
-    section.two {
-        h2 {
-            font-size: 28px;
-        }
-    }
 
-    .socials {
-        display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(130px, 1fr));
-        grid-gap: 15px;
-        justify-items: center;
-        text-align: center;
-        margin: 65px auto 0 auto;
-        justify-content: center;
-
-        .socialMedia {
-            margin: 1rem;
-
+        section.two {
+            h2 {
+                font-size: 28px;
+            }
         }
 
-        .roundedBorders {
-            font-size: 14px;
-            margin: 14px auto 0 auto;
-            padding: 7px 9px;
-            border: 1px solid #C4C4C4;
-            box-sizing: border-box;
-            border-radius: 30px;
-        }
-    }
+        .socials {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(130px, 1fr));
+            grid-gap: 15px;
+            justify-items: center;
+            text-align: center;
+            margin: 65px auto 0 auto;
+            justify-content: center;
 
-    section.three {
-        h2 {
-            font-size: 28px;
+            .socialMedia {
+                margin: 1rem;
+
+            }
+
+            .roundedBorders {
+                font-size: 14px;
+                margin: 14px auto 0 auto;
+                padding: 7px 9px;
+                border: 1px solid #C4C4C4;
+                box-sizing: border-box;
+                border-radius: 30px;
+            }
+        }
+
+        section.three {
+            h2 {
+                font-size: 28px;
+            }
         }
     }
 
@@ -423,6 +433,7 @@
             color: #FFFFFF;
 
             .footerTop {
+                text-align: center;
                 display: block;
 
                 a {
@@ -436,7 +447,7 @@
 
                 .text {
                     margin-top: 2.5rem;
-                    text-align: left;
+                    text-align: center;
                 }
             }
 
@@ -537,89 +548,6 @@
             }
         }
     }
-
-    body#Услуги {
-
-        .headerImage {
-            background-image: linear-gradient(rgba(44, 94, 142, 0.01), rgba(44, 94, 142, 0.3)), url("../img/Услуги_header_background.png");
-            display: block;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-
-            .headerImageInner {
-                display: block;
-                float: right;
-                justify-content: center;
-                align-items: center;
-                text-align: right;
-                padding: 0 auto;
-            }
-
-            h1 {
-                margin: 0 px 0 0;
-                padding: 12rem 0 0 0;
-                background-image: none;
-                -webkit-background-clip: none;
-                -webkit-text-fill-color: #000000;
-                color: #000000;
-                text-align: right;
-                // font-size: 42px;
-
-                b {
-                    font-size: 60px;
-                }
-            }
-
-            button.btn {
-                float: right;
-                border: none;
-                display: block;
-                padding: 24px 34px;
-                font-style: normal;
-                font-weight: normal;
-                line-height: normal;
-                // font-size: 22px;
-                text-align: center;
-                letter-spacing: 0.1em;
-                color: #ffffff;
-                text-decoration: none;
-                background: #2C5E8E;
-                border-radius: 50px;
-                -webkit-border-radius: 50px;
-                -moz-border-radius: 50px;
-                -ms-border-radius: 50px;
-                -o-border-radius: 50px;
-                margin: 0 18px 0 0;
-                margin-top: .5rem;
-                justify-self: center;
-            }
-
-
-        }
-
-        main {
-
-            section.one {
-                h2 {
-                    font-size: 28px;
-                }
-            }
-        }
-
-        section.two {
-            h2 {
-                font-size: 28px;
-            }
-        }
-
-        section.three {
-            h2 {
-                font-size: 28px;
-            }
-        }
-    }
-
 
 }
 
@@ -883,6 +811,7 @@
 
             .footerTop {
                 display: block;
+                text-align: center;
 
                 a {
                     color: #FFFFFF;
@@ -895,7 +824,7 @@
 
                 .text {
                     margin-top: 2.5rem;
-                    text-align: left;
+                    text-align: center;
                 }
             }
 
@@ -1011,6 +940,8 @@
             text-align: center;
             float: none;
             font-size: 48px;
+
+
         }
 
         a#svgButton {
@@ -1086,127 +1017,253 @@
             font-size: 28px;
         }
     }
-}
 
-section.two {
-    h2 {
-        font-size: 28px;
-    }
-}
 
-@include mediaXXSm {
-
-    .headerImage {
-        h1 {
-            font-size: 32px;
-        }
-    }
-
-    main {
-        width: 100%;
-
+    section.two {
         h2 {
             font-size: 28px;
         }
     }
-}
 
-@include mediaLandscape {
+    footer {
+        text-align: center;
 
-    .headerImage {
-        h1 {
-            padding-top: calc(100vh - 90vh);
-            margin: 0 20px 0 0;
-            font-size: 32px;
-            float: right;
-            text-align: left;
-        }
-
-
-
-
-
-        a#svgButton {
-            margin: 10% 0 0 20px;
-            position: relative;
-            z-index: 0;
-            float: left;
-        }
-
+        body#Услуги {}
     }
 
+    @include mediaXXSm {
 
-    main {
+        .headerImage {
+            h1 {
+                font-size: 32px;
+            }
+        }
 
-        h2 {
-            font-size: 30px;
+        main {
+
+            h2 {
+                font-size: 28px;
+            }
+        }
+
+        body#Услуги {
+            .headerImage {
+                h1 {
+                    font-size: 32px;
+                }
+            }
+
+            main {
+                width: 100%;
+
+                h2 {
+                    font-size: 28px;
+                }
+            }
         }
     }
-}
 
-@include mediaXlLandscape {
+    @include mediaLandscape {
 
-    .headerImage {
-        h1 {
-            padding-top: calc(100vh - 80vh);
-            margin: 0 50px 0 0;
-            font-size: 38px;
-            float: right;
-            text-align: left;
+        .headerImage {
+            h1 {
+                padding-top: calc(100vh - 90vh);
+                margin: 0 20px 0 0;
+                font-size: 32px;
+                float: right;
+                text-align: left;
+            }
+
+            a#svgButton {
+                margin: 10% 0 0 20px;
+                position: relative;
+                z-index: 0;
+                float: left;
+            }
+
         }
 
 
+        main {
 
-
-
-        a#svgButton {
-            margin: 18% 0 0 60px;
-            position: relative;
-            z-index: 0;
-            float: left;
+            h2 {
+                font-size: 30px;
+            }
         }
 
+        body#Услуги {
+
+            .headerImage {
+                h1 {
+                    padding-top: calc(100vh - 90vh);
+                    margin: 0 20px 0 0;
+                    font-size: 32px;
+                    float: right;
+                    text-align: left;
+
+                    b {
+                        font-size: 38px;
+                    }
+                }
+
+
+
+
+
+                a#svgButton {
+                    margin: 10% 0 0 20px;
+                    position: relative;
+                    z-index: 0;
+                    float: left;
+                }
+
+            }
+
+
+            main {
+
+                h2 {
+                    font-size: 30px;
+                }
+            }
+        }
     }
 
+    @include mediaXlLandscape {
 
-    main {
+        .headerImage {
+            h1 {
+                padding-top: calc(100vh - 80vh);
+                margin: 0 50px 0 0;
+                font-size: 38px;
+                float: right;
+                text-align: left;
+            }
 
-        h2 {
-            font-size: 30px;
+
+
+
+
+            a#svgButton {
+                margin: 18% 0 0 0;
+                position: relative;
+                z-index: 0;
+                float: left;
+            }
+
+        }
+
+
+        main {
+
+            h2 {
+                font-size: 30px;
+            }
+        }
+
+        body#Услуги {
+
+            .headerImage {
+                h1 {
+                    padding-top: calc(100vh - 80vh);
+                    margin: 0 50px 0 0;
+                    font-size: 38px;
+                    float: right;
+                    text-align: left;
+
+                    b {
+                        font-size: 48px;
+                    }
+                }
+
+                a#svgButton {
+                    margin: 18% 0 0 60px;
+                    position: relative;
+                    z-index: 0;
+                    float: left;
+                }
+
+            }
+
+
+            main {
+
+                h2 {
+                    font-size: 30px;
+                }
+            }
         }
     }
-}
 
-@include mediaLandscape {
+    @include mediaLandscape {
 
-    .headerImage {
-        h1 {
-            padding-top: calc(100vh - 90vh);
-            margin: 0 10px 0 0;
-            font-size: 30px;
-            float: right;
-            text-align: left;
+        .headerImage {
+            h1 {
+                padding-top: calc(100vh - 90vh);
+                margin: 0 10px 0 0;
+                font-size: 30px;
+                float: right;
+                text-align: left;
+            }
+
+
+
+
+
+            a#svgButton {
+                margin: 15% 0 0 20px;
+                position: relative;
+                z-index: 0;
+                float: left;
+                font-size: 16px;
+            }
+
         }
 
 
+        main {
 
-
-
-        a#svgButton {
-            margin: 15% 0 0 20px;
-            position: relative;
-            z-index: 0;
-            float: left;
-            font-size: 16px;
+            h2 {
+                font-size: 30px;
+            }
         }
 
-    }
+        body#Услуги {
+
+            .headerImage {
+                h1 {
+                    padding-top: calc(100vh - 90vh);
+                    margin: 0 10px 0 0;
+                    font-size: 30px;
+                    float: right;
+                    text-align: left;
+
+                    b {
+                        font-size: 35.5px;
+                    }
+                }
 
 
-    main {
 
-        h2 {
-            font-size: 30px;
+
+
+                a#svgButton {
+                    margin: 15% 0 0 20px;
+                    position: relative;
+                    z-index: 0;
+                    float: left;
+                    font-size: 16px;
+                }
+
+            }
+
+
+            main {
+
+                h2 {
+                    font-size: 30px;
+                }
+            }
         }
     }
 }
