--- a/scss/style.scss
+++ b/scss/style.scss
@@ -16,9 +16,10 @@ html {
 body {
     background-color: $backgroudColor;
     color: set-text-color($backgroudColor);
-    width: 95%;
+    width: 100%;
     height: 100%;
     padding: 1rem auto;
+    overflow-x: hidden;
 
 }
 
@@ -223,7 +224,7 @@ header {
                 &:first-of-type {
                     fill: transparent;
                     stroke: url(#linearGradient-1);
-                    stroke-width: 3;
+                    stroke-width: 5;
                     opacity: 1;
                 }
 
