--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,4 @@
 @charset "UTF-8";
-@import url("https://rsms.me/inter/inter.css");
-@import url("typeface-inter");
-@import url("Inter-UI");
 * {
   margin: 0;
   padding: 0;
@@ -22,49 +19,49 @@ body {
   overflow-x: hidden; }
 
 h1 {
-  font-family: "Inter UI", "Roboto", sans-serif;
+  font-family: "Inter", "Roboto", sans-serif;
   font-style: normal;
   font-weight: normal;
   line-height: normal;
   font-size: 72px; }
 
 h2 {
-  font-family: "Inter UI", "Roboto", sans-serif;
+  font-family: "Inter", "Roboto", sans-serif;
   font-style: normal;
   font-weight: 500;
   line-height: normal;
   font-size: 42px; }
 
 h3 {
-  font-family: "Inter UI", "Roboto", sans-serif;
+  font-family: "Inter", "Roboto", sans-serif;
   font-size: 30px;
   font-style: normal;
   font-weight: normal;
   line-height: normal; }
 
 h4 {
-  font-family: "Inter UI", "Roboto", sans-serif;
+  font-family: "Inter", "Roboto", sans-serif;
   font-size: 24px;
   font-style: normal;
   font-weight: normal;
   line-height: normal; }
 
 h5 {
-  font-family: "Inter UI", "Roboto", sans-serif;
+  font-family: "Inter", "Roboto", sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: normal;
   line-height: normal; }
 
 h6 {
-  font-family: "Inter UI", "Roboto", sans-serif;
+  font-family: "Inter", "Roboto", sans-serif;
   font-size: 16px;
   font-style: normal;
   font-weight: normal;
   line-height: normal; }
 
 a {
-  font-family: "Inter UI", "Roboto", sans-serif;
+  font-family: "Inter", "Roboto", sans-serif;
   font-size: 16px;
   line-height: 8.19px;
   color: #333333;
@@ -72,7 +69,7 @@ a {
 
 p {
   font-size: 18px;
-  font-family: "Inter UI", "Roboto", sans-serif;
+  font-family: "Inter", "Roboto", sans-serif;
   padding: 0.5rem 0; }
 
 button {
@@ -701,14 +698,18 @@ body#Услуги footer {
     .menu-btn.close .btn-line:nth-child(3) {
       transform: rotate(-45deg) translate(7px, -6px); }
   .menu {
-    z-index: 2;
-    top: 0px;
     width: 100%;
-    height: 100%;
     opacity: 0.9;
     visibility: hidden; }
     .menu.show {
-      visibility: visible; }
+      visibility: visible;
+      position: fixed;
+      z-index: 2;
+      height: auto;
+      margin-top: 10%;
+      justify-content: center;
+      align-items: center;
+      text-align: center; }
     .menu-nav {
       display: block;
       text-align: center;
@@ -716,7 +717,7 @@ body#Услуги footer {
       justify-content: center;
       float: none;
       width: 100%;
-      height: 100vh;
+      height: auto;
       overflow-x: hidden; }
     .menu-nav {
       margin: 0;
@@ -733,12 +734,14 @@ body#Услуги footer {
         -o-transform: translate3d(0, 0, 0); }
     .menu .nav-item {
       display: block;
+      padding: 20px;
+      font-size: 32px;
       transform: translate3d(600px, 0, 0);
       transition: all 500ms ease-in-out; }
       .menu .nav-item.show {
         transform: translate3d(0, 0, 0); }
       .menu .nav-item.current > a {
-        color: #333; }
+        color: #72A5BA; }
     .menu .nav-link {
       display: inline-block;
       position: relative;
@@ -933,14 +936,17 @@ body#Услуги footer {
     .menu-btn.close .btn-line:nth-child(3) {
       transform: rotate(-45deg) translate(7px, -6px); }
   .menu {
-    z-index: 2;
-    top: 0px;
-    width: 100%;
-    height: 100%;
     opacity: 0.9;
     visibility: hidden; }
     .menu.show {
-      visibility: visible; }
+      visibility: visible;
+      position: fixed;
+      z-index: 2;
+      height: auto;
+      margin-top: 10%;
+      justify-content: center;
+      align-items: center;
+      text-align: center; }
     .menu-nav {
       display: block;
       text-align: center;
@@ -948,7 +954,7 @@ body#Услуги footer {
       justify-content: center;
       float: none;
       width: 100%;
-      height: 100vh;
+      height: auto;
       overflow-x: hidden; }
     .menu-nav {
       margin: 0;
@@ -965,12 +971,13 @@ body#Услуги footer {
         -o-transform: translate3d(0, 0, 0); }
     .menu .nav-item {
       display: block;
+      font-size: 18px;
       transform: translate3d(600px, 0, 0);
       transition: all 500ms ease-in-out; }
       .menu .nav-item.show {
         transform: translate3d(0, 0, 0); }
       .menu .nav-item.current > a {
-        color: #333; }
+        color: #72A5BA; }
     .menu .nav-link {
       display: inline-block;
       position: relative;
@@ -1137,6 +1144,88 @@ body#Услуги footer {
     font-size: 28px; } }
 
 @media screen and (max-width: 400px) {
+  .menu-btn {
+    position: absolute;
+    z-index: 3;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    line-height: normal;
+    font-size: 16px;
+    cursor: pointer;
+    transition: all 500ms ease-in-out; }
+    .menu-btn .btn-line {
+      width: 28px;
+      height: 3px;
+      margin: 0 0 5px 0;
+      background: black;
+      transition: all 500ms ease-in-out; }
+    .menu-btn.close .btn-line:nth-child(1) {
+      transform: rotate(45deg) translate(5px, 5px); }
+    .menu-btn.close .btn-line:nth-child(2) {
+      opacity: 0; }
+    .menu-btn.close .btn-line:nth-child(3) {
+      transform: rotate(-45deg) translate(7px, -6px); }
+  .menu {
+    opacity: 0.9;
+    visibility: hidden; }
+    .menu.show {
+      visibility: visible;
+      position: fixed;
+      z-index: 2;
+      height: auto;
+      margin-top: 10%;
+      justify-content: center;
+      align-items: center;
+      text-align: center; }
+    .menu-nav {
+      display: block;
+      text-align: center;
+      align-items: center;
+      justify-content: center;
+      float: none;
+      width: 100%;
+      height: auto;
+      overflow-x: hidden; }
+    .menu-nav {
+      margin: 0;
+      padding: 0;
+      background: #373737;
+      list-style: none;
+      transform: translate3d(0, -100%, 0);
+      transition: all 500ms ease-in-out; }
+      .menu-nav.show {
+        transform: translate3d(0, 0, 0);
+        -webkit-transform: translate3d(0, 0, 0);
+        -moz-transform: translate3d(0, 0, 0);
+        -ms-transform: translate3d(0, 0, 0);
+        -o-transform: translate3d(0, 0, 0); }
+    .menu .nav-item {
+      display: block;
+      padding: 20px;
+      font-size: 22px;
+      transform: translate3d(600px, 0, 0);
+      transition: all 500ms ease-in-out; }
+      .menu .nav-item.show {
+        transform: translate3d(0, 0, 0); }
+      .menu .nav-item.current > a {
+        color: #72A5BA; }
+    .menu .nav-link {
+      display: inline-block;
+      position: relative;
+      font-size: 16px;
+      text-transform: uppercase;
+      padding: 1rem 0;
+      font-weight: 300;
+      color: white;
+      text-decoration: none;
+      transition: all 500ms ease-in-out; }
+      .menu .nav-link:hover {
+        color: lightgray;
+        transform: scale(1.1); }
   .headerImage {
     display: block;
     justify-content: center;
@@ -1186,10 +1275,10 @@ body#Услуги footer {
       .headerImage a#svgButton:hover path.icon--plain {
         opacity: 1; }
   section.one .card {
-    min-width: 360px; }
+    min-width: 3px; }
     section.one .card p {
       padding: 0.5rem 0;
-      margin: 0 10px 0 26px; }
+      margin: 0 10px 0 20px; }
   section.one h2 {
     font-size: 28px; }
   section.two h2 {
@@ -1197,7 +1286,7 @@ body#Услуги footer {
   footer {
     text-align: center; } }
 
-@media screen and (max-width: 400px) and (max-width: 320px) {
+@media screen and (max-width: 360px) {
   .headerImage h1 {
     font-size: 32px; }
   main h2 {
@@ -1209,7 +1298,7 @@ body#Услуги footer {
     body#Услуги main h2 {
       font-size: 28px; } }
 
-@media screen and (max-width: 400px) and (max-width: 720px) and (orientation: landscape) {
+@media screen and (max-width: 720px) and (orientation: landscape) {
   .headerImage h1 {
     padding-top: calc(100vh - 90vh);
     margin: 0 20px 0 0;
@@ -1239,7 +1328,7 @@ body#Услуги footer {
   body#Услуги main h2 {
     font-size: 30px; } }
 
-@media screen and (max-width: 400px) and (max-width: 830px) and (orientation: landscape) {
+@media screen and (max-width: 980px) and (orientation: landscape) {
   .headerImage h1 {
     padding-top: calc(100vh - 80vh);
     margin: 0 50px 0 0;
@@ -1269,7 +1358,7 @@ body#Услуги footer {
   body#Услуги main h2 {
     font-size: 30px; } }
 
-@media screen and (max-width: 400px) and (max-width: 720px) and (orientation: landscape) {
+@media screen and (max-width: 720px) and (orientation: landscape) {
   .headerImage h1 {
     padding-top: calc(100vh - 90vh);
     margin: 0 10px 0 0;
