--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
   color: #000000;
   width: 100%;
   height: 100%;
-  padding: 1rem auto;
+  padding: 1rem 0;
   overflow-x: hidden; }
 
 h1 {
@@ -344,7 +344,7 @@ main {
         line-height: normal;
         font-size: 30px;
         color: #333333;
-        padding: 0 auto; }
+        padding: 0; }
       main .cards .cardWithImages p.priceExplanation {
         font-style: normal;
         font-weight: normal;
@@ -352,7 +352,7 @@ main {
         font-size: 12px;
         color: #6D6D6D;
         margin: 0 auto;
-        padding: 0 auto; }
+        padding: 0; }
       main .cards .cardWithImages p {
         font-style: normal;
         font-weight: normal;
@@ -475,7 +475,7 @@ body#Услуги .headerImage {
     justify-content: center;
     align-items: center;
     text-align: center;
-    padding: 0 auto; }
+    padding: 0; }
   body#Услуги .headerImage h1 {
     margin: 0;
     margin-top: 6rem;
@@ -632,7 +632,7 @@ body#Услуги footer {
       justify-content: center;
       align-items: center;
       text-align: right;
-      padding: 0 auto; }
+      padding: 0; }
     body#Услуги .headerImage h1 {
       margin: 0 18px 0 0;
       padding: 5rem 0 0 0;
@@ -852,7 +852,7 @@ body#Услуги footer {
       footer .footerContainer .supportOptions {
         display: grid;
         margin: 1rem auto;
-        padding: 0 auto;
+        padding: 0;
         text-align: center;
         justify-items: center;
         justify-content: center; }
@@ -870,7 +870,7 @@ body#Услуги footer {
       justify-content: center;
       align-items: center;
       text-align: right;
-      padding: 0 auto; }
+      padding: 0; }
     body#Услуги .headerImage h1 {
       margin: 0 14px 0 0;
       padding: 5rem 0 0 0;
@@ -1104,7 +1104,7 @@ body#Услуги footer {
       justify-content: center;
       align-items: center;
       text-align: right;
-      padding: 0 auto; }
+      padding: 0; }
     body#Услуги .headerImage h1 {
       margin: 0 14px 0 0;
       padding: 5rem 0 0 0;
