--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -105,7 +105,7 @@
                 justify-content: center;
                 align-items: center;
                 text-align: right;
-                padding: 0 auto;
+                padding: 0;
             }
 
             h1 {
@@ -460,7 +460,7 @@
             .supportOptions {
                 display: grid;
                 margin: 1rem auto;
-                padding: 0 auto;
+                padding: 0;
                 text-align: center;
                 justify-items: center;
                 justify-content: center;
@@ -488,7 +488,7 @@
                 justify-content: center;
                 align-items: center;
                 text-align: right;
-                padding: 0 auto;
+                padding: 0;
             }
 
             h1 {
@@ -868,7 +868,7 @@
                 justify-content: center;
                 align-items: center;
                 text-align: right;
-                padding: 0 auto;
+                padding: 0;
             }
 
             h1 {
