--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import url("https://fonts.googleapis.com/css?family=Roboto");
 * {
   margin: 0;
   padding: 0;
@@ -21,7 +22,7 @@ body {
 h1 {
   font-family: "Inter", "Roboto", sans-serif;
   font-style: normal;
-  font-weight: normal;
+  font-weight: 400;
   line-height: normal;
   font-size: 72px; }
 
@@ -94,7 +95,6 @@ header {
   position: relative;
   display: flex;
   padding: 10px;
-  justify-items: center;
   float: left;
   background: #FFFFFF;
   box-shadow: 0px 6px 25px rgba(0, 0, 0, 0.25);
@@ -209,7 +209,7 @@ main {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
     grid-gap: 20px;
-    justify-items: center; }
+    justify-content: center; }
     main .threeCards .card {
       display: block;
       background-color: #ffffff;
@@ -300,7 +300,6 @@ main {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(130px, 1fr));
     grid-gap: 20px;
-    justify-items: center;
     text-align: center;
     margin: 65px auto 0 auto;
     justify-content: center; }
@@ -317,8 +316,7 @@ main {
     margin: 1.5rem auto 60px;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    grid-gap: 55px;
-    justify-items: center; }
+    grid-gap: 55px; }
     main .cards .cardWithImages {
       background-color: #ffffff;
       margin: 1rem;
@@ -722,7 +720,7 @@ body#Услуги footer {
     .menu-nav {
       margin: 0;
       padding: 0;
-      background: #373737;
+      background: #262626;
       list-style: none;
       transform: translate3d(0, -100%, 0);
       transition: all 500ms ease-in-out; }
@@ -734,8 +732,7 @@ body#Услуги footer {
         -o-transform: translate3d(0, 0, 0); }
     .menu .nav-item {
       display: block;
-      padding: 20px;
-      font-size: 32px;
+      padding: 30px;
       transform: translate3d(600px, 0, 0);
       transition: all 500ms ease-in-out; }
       .menu .nav-item.show {
@@ -745,7 +742,7 @@ body#Услуги footer {
     .menu .nav-link {
       display: inline-block;
       position: relative;
-      font-size: 16px;
+      font-size: 32px;
       text-transform: uppercase;
       padding: 1rem 0;
       font-weight: 300;
@@ -803,32 +800,114 @@ body#Услуги footer {
         opacity: 0; }
       .headerImage a#svgButton:hover path.icon--plain {
         opacity: 1; }
-  main section.one .card {
-    min-width: 300px; }
-    main section.one .card p {
-      margin: 0 10px 0 28px; }
   main section.one h2 {
     font-size: 28px; }
-  main section.two h2 {
+  main section.one .threeCards {
+    margin: 1.5rem auto;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    grid-gap: 20px;
+    justify-items: center;
+    justify-content: center; }
+    main section.one .threeCards .card {
+      display: block;
+      background-color: #ffffff;
+      margin: 1.5rem auto;
+      min-width: 360px;
+      max-width: 360px;
+      height: 400px;
+      box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.35);
+      border-radius: 50px;
+      color: #333333;
+      text-align: center;
+      justify-items: center;
+      justify-content: center; }
+      main section.one .threeCards .card:nth-child(1) .cardParag {
+        padding-bottom: 4rem; }
+      main section.one .threeCards .card:nth-child(2) .cardParag {
+        padding-bottom: 0.5rem; }
+      main section.one .threeCards .card:nth-child(3) .cardParag {
+        padding-bottom: 7rem; }
+      main section.one .threeCards .card h3 {
+        margin: 20px 0 0 0;
+        text-align: center; }
+      main section.one .threeCards .card hr {
+        width: 80%;
+        margin: 10px auto 0 auto;
+        text-align: left;
+        border: 2px solid #E5E5E5; }
+      main section.one .threeCards .card p {
+        margin: 0 10px 0 28px;
+        text-align: left;
+        font-style: normal;
+        font-weight: normal;
+        line-height: normal;
+        font-size: 16px;
+        color: #6D6D6D; }
+      main section.one .threeCards .card a.cardSvgButton {
+        display: block;
+        color: #557C8C;
+        font-size: 15px;
+        position: relative;
+        margin: 10px auto;
+        padding: 14px 28px;
+        border-radius: 28px;
+        -webkit-border-radius: 28px;
+        -moz-border-radius: 28px;
+        -ms-border-radius: 28px;
+        -o-border-radius: 28px;
+        position: relative;
+        z-index: 0;
+        font-style: normal;
+        font-weight: normal;
+        line-height: normal;
+        text-align: center;
+        text-decoration: none; }
+        main section.one .threeCards .card a.cardSvgButton .icon {
+          position: absolute;
+          top: 0px;
+          left: 0px;
+          height: 100%;
+          width: 100%;
+          z-index: -1; }
+          main section.one .threeCards .card a.cardSvgButton .icon path {
+            transition: opacity 0.4s ease; }
+            main section.one .threeCards .card a.cardSvgButton .icon path:first-of-type {
+              fill: transparent;
+              stroke: url(#linearGradient-1);
+              stroke-width: 3;
+              opacity: 1; }
+            main section.one .threeCards .card a.cardSvgButton .icon path.icon--plain {
+              opacity: 0;
+              stroke: none;
+              stroke-width: 0; }
+        main section.one .threeCards .card a.cardSvgButton:hover {
+          transition: all 500ms ease-in-out; }
+          main section.one .threeCards .card a.cardSvgButton:hover path:first-of-type {
+            opacity: 0; }
+          main section.one .threeCards .card a.cardSvgButton:hover path.icon--plain {
+            opacity: 1; }
+  main h2 {
     font-size: 28px; }
-  main .socials {
+  section.two h2 {
+    font-size: 28px; }
+  .socials {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(130px, 1fr));
     grid-gap: 15px;
-    justify-items: center;
     text-align: center;
     margin: 65px auto 0 auto;
     justify-content: center; }
-    main .socials .socialMedia {
+    .socials .socialMedia {
       margin: 1rem; }
-    main .socials .roundedBorders {
+    .socials .roundedBorders {
       font-size: 14px;
       margin: 14px auto 0 auto;
       padding: 7px 9px;
       border: 1px solid #C4C4C4;
       box-sizing: border-box;
       border-radius: 30px; }
-  main section.three h2 {
+  section.three h2 {
     font-size: 28px; }
   footer {
     display: block; }
@@ -854,7 +933,6 @@ body#Услуги footer {
         margin: 1rem auto;
         padding: 0;
         text-align: center;
-        justify-items: center;
         justify-content: center; }
         footer .footerContainer .supportOptions hr {
           height: 90%; }
@@ -959,7 +1037,7 @@ body#Услуги footer {
     .menu-nav {
       margin: 0;
       padding: 0;
-      background: #373737;
+      background: #262626;
       list-style: none;
       transform: translate3d(0, -100%, 0);
       transition: all 500ms ease-in-out; }
@@ -1051,7 +1129,6 @@ body#Услуги footer {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(130px, 1fr));
     grid-gap: 15px;
-    justify-items: center;
     text-align: center;
     margin: 65px auto 0 auto;
     justify-content: center; }
@@ -1193,7 +1270,7 @@ body#Услуги footer {
     .menu-nav {
       margin: 0;
       padding: 0;
-      background: #373737;
+      background: #262626;
       list-style: none;
       transform: translate3d(0, -100%, 0);
       transition: all 500ms ease-in-out; }
@@ -1287,6 +1364,223 @@ body#Услуги footer {
     text-align: center; } }
 
 @media screen and (max-width: 360px) {
+  .menu-btn {
+    position: absolute;
+    z-index: 3;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    line-height: normal;
+    font-size: 16px;
+    cursor: pointer;
+    transition: all 500ms ease-in-out; }
+    .menu-btn .btn-line {
+      width: 28px;
+      height: 3px;
+      margin: 0 0 5px 0;
+      background: black;
+      transition: all 500ms ease-in-out; }
+    .menu-btn.close .btn-line:nth-child(1) {
+      transform: rotate(45deg) translate(5px, 5px); }
+    .menu-btn.close .btn-line:nth-child(2) {
+      opacity: 0; }
+    .menu-btn.close .btn-line:nth-child(3) {
+      transform: rotate(-45deg) translate(7px, -6px); }
+  .menu {
+    opacity: 0.9;
+    visibility: hidden; }
+    .menu.show {
+      visibility: visible;
+      position: fixed;
+      z-index: 2;
+      height: auto;
+      margin-top: calc(100vh - 90vh);
+      justify-content: center;
+      align-items: center;
+      text-align: center; }
+    .menu-nav {
+      display: block;
+      text-align: center;
+      align-items: center;
+      justify-content: center;
+      float: none;
+      width: 100%;
+      height: auto;
+      overflow-x: hidden; }
+    .menu-nav {
+      margin: 0;
+      padding: 0;
+      background: #262626;
+      list-style: none;
+      transform: translate3d(0, -100%, 0);
+      transition: all 500ms ease-in-out; }
+      .menu-nav.show {
+        transform: translate3d(0, 0, 0);
+        -webkit-transform: translate3d(0, 0, 0);
+        -moz-transform: translate3d(0, 0, 0);
+        -ms-transform: translate3d(0, 0, 0);
+        -o-transform: translate3d(0, 0, 0); }
+    .menu .nav-item {
+      display: block;
+      padding: 15px;
+      transform: translate3d(600px, 0, 0);
+      transition: all 500ms ease-in-out; }
+      .menu .nav-item.show {
+        transform: translate3d(0, 0, 0); }
+      .menu .nav-item.current > a {
+        color: #72A5BA; }
+    .menu .nav-link {
+      display: inline-block;
+      position: relative;
+      font-size: 16px;
+      text-transform: uppercase;
+      padding: 1rem 0;
+      font-weight: 300;
+      color: white;
+      text-decoration: none;
+      transition: all 500ms ease-in-out; }
+      .menu .nav-link:hover {
+        color: lightgray;
+        transform: scale(1.1); }
+  .headerImage {
+    display: block;
+    justify-content: center;
+    align-items: center;
+    text-align: center; }
+    .headerImage h1 {
+      padding-top: calc(100vh - 60vh);
+      margin: 0 0 2rem 0;
+      text-align: center;
+      float: none;
+      font-size: 48px; }
+    .headerImage a#svgButton {
+      position: relative;
+      padding: 23px 35px;
+      z-index: 0;
+      float: none;
+      font-style: normal;
+      font-weight: normal;
+      line-height: normal;
+      font-size: 26px;
+      text-align: center;
+      letter-spacing: 0.1em;
+      color: #AEE1F7;
+      text-decoration: none;
+      margin: 0 0 0 0;
+      border-radius: 35px; }
+      .headerImage a#svgButton .icon {
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        height: 100%;
+        width: 100%;
+        z-index: -1; }
+        .headerImage a#svgButton .icon path {
+          transition: opacity 0.4s ease; }
+          .headerImage a#svgButton .icon path:first-of-type {
+            fill: transparent;
+            stroke: url(#linearGradient-1);
+            stroke-width: 3;
+            opacity: 1; }
+          .headerImage a#svgButton .icon path.icon--plain {
+            opacity: 0;
+            stroke: none;
+            stroke-width: 0; }
+      .headerImage a#svgButton:hover path:first-of-type {
+        opacity: 0; }
+      .headerImage a#svgButton:hover path.icon--plain {
+        opacity: 1; }
+  section.one h2 {
+    font-size: 28px; }
+  section.one .threeCards {
+    margin: 1.5rem auto;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    grid-gap: 20px;
+    justify-content: center; }
+    section.one .threeCards .card {
+      display: block;
+      background-color: #ffffff;
+      margin: 1.5rem auto;
+      min-width: 290px;
+      max-width: 300px;
+      height: 400px;
+      box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.35);
+      border-radius: 50px;
+      color: #333333;
+      text-align: center; }
+      section.one .threeCards .card:nth-child(1) .cardParag {
+        padding-bottom: 4rem; }
+      section.one .threeCards .card:nth-child(2) .cardParag {
+        padding-bottom: 0rem; }
+      section.one .threeCards .card:nth-child(3) .cardParag {
+        padding-bottom: 7rem; }
+      section.one .threeCards .card h3 {
+        margin: 10px 0 0 0;
+        text-align: center; }
+      section.one .threeCards .card hr {
+        width: 80%;
+        margin: 10px auto 0 auto;
+        text-align: left;
+        border: 2px solid #E5E5E5; }
+      section.one .threeCards .card p {
+        margin: 0 15px;
+        text-align: left;
+        font-style: normal;
+        font-weight: normal;
+        line-height: normal;
+        font-size: 14px;
+        color: #6D6D6D; }
+      section.one .threeCards .card a.cardSvgButton {
+        display: block;
+        color: #557C8C;
+        font-size: 15px;
+        position: relative;
+        margin: 10px auto;
+        padding: 14px 28px;
+        border-radius: 28px;
+        -webkit-border-radius: 28px;
+        -moz-border-radius: 28px;
+        -ms-border-radius: 28px;
+        -o-border-radius: 28px;
+        position: relative;
+        z-index: 0;
+        font-style: normal;
+        font-weight: normal;
+        line-height: normal;
+        text-align: center;
+        text-decoration: none; }
+        section.one .threeCards .card a.cardSvgButton .icon {
+          position: absolute;
+          top: 0px;
+          left: 0px;
+          height: 100%;
+          width: 100%;
+          z-index: -1; }
+          section.one .threeCards .card a.cardSvgButton .icon path {
+            transition: opacity 0.4s ease; }
+            section.one .threeCards .card a.cardSvgButton .icon path:first-of-type {
+              fill: transparent;
+              stroke: url(#linearGradient-1);
+              stroke-width: 3;
+              opacity: 1; }
+            section.one .threeCards .card a.cardSvgButton .icon path.icon--plain {
+              opacity: 0;
+              stroke: none;
+              stroke-width: 0; }
+        section.one .threeCards .card a.cardSvgButton:hover {
+          transition: all 500ms ease-in-out; }
+          section.one .threeCards .card a.cardSvgButton:hover path:first-of-type {
+            opacity: 0; }
+          section.one .threeCards .card a.cardSvgButton:hover path.icon--plain {
+            opacity: 1; }
+  section.two h2 {
+    font-size: 28px; }
+  footer {
+    text-align: center; }
   .headerImage h1 {
     font-size: 32px; }
   main h2 {
@@ -1349,7 +1643,7 @@ body#Услуги footer {
     .menu-nav {
       margin: 0;
       padding: 0;
-      background: #373737;
+      background: #262626;
       list-style: none;
       transform: translate3d(0, -100%, 0);
       transition: all 500ms ease-in-out; }
@@ -1396,18 +1690,17 @@ body#Услуги footer {
   main h2 {
     font-size: 30px; }
   body#Услуги .headerImage h1 {
-    padding-top: calc(100vh - 90vh);
-    margin: 0 20px 0 0;
-    font-size: 32px;
+    padding-top: calc(100vh - 80vh);
+    margin: 0 50px 0 0;
+    font-size: 38px;
     float: right;
     text-align: left; }
     body#Услуги .headerImage h1 b {
-      font-size: 38px; }
+      font-size: 40px; }
   body#Услуги .headerImage a#svgButton {
-    margin: 10% 0 0 20px;
+    margin: 18% 0 0 60px;
     position: relative;
-    z-index: 0;
-    float: left; }
+    z-index: 0; }
   body#Услуги main h2 {
     font-size: 30px; } }
 
@@ -1462,7 +1755,7 @@ body#Услуги footer {
     .menu-nav {
       margin: 0;
       padding: 0;
-      background: #373737;
+      background: #262626;
       list-style: none;
       transform: translate3d(0, -100%, 0);
       transition: all 500ms ease-in-out; }
@@ -1575,7 +1868,7 @@ body#Услуги footer {
     .menu-nav {
       margin: 0;
       padding: 0;
-      background: #373737;
+      background: #262626;
       list-style: none;
       transform: translate3d(0, -100%, 0);
       transition: all 500ms ease-in-out; }
