--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -268,8 +268,7 @@
 
         .nav-item {
             display: block;
-            padding: 20px;
-            font-size: 32px;
+            padding: 30px;
             transform: translate3d(600px, 0, 0);
             @include easeOut;
 
@@ -286,7 +285,7 @@
         .nav-link {
             display: inline-block;
             position: relative;
-            font-size: 16px;
+            font-size: 32px;
             text-transform: uppercase;
             padding: 1rem 0;
             font-weight: 300;
@@ -375,56 +374,180 @@
 
     main {
 
+
+
         section.one {
 
-            .card {
-                min-width: 300px;
+            h2 {
+                font-size: 28px;
+            }
 
-                p {
-                    margin: 0 10px 0 28px;
+            .threeCards {
+                margin: 1.5rem auto;
+                display: grid;
+                grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+                grid-gap: 20px;
+                justify-items: center;
+                justify-content: center;
+
+                .card {
+                    display: block;
+                    background-color: #ffffff;
+                    margin: 1.5rem auto;
+                    min-width: 360px;
+                    max-width: 360px;
+                    height: 400px;
+                    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.35);
+                    border-radius: 50px;
+                    color: #333333;
+                    text-align: center;
+                    justify-items: center;
+                    justify-content: center;
+
+                    &:nth-child(1) {
+                        .cardParag {
+                            padding-bottom: 4rem;
+                        }
+                    }
+
+                    &:nth-child(2) {
+                        .cardParag {
+                            padding-bottom: 0.5rem;
+                        }
+                    }
+
+                    &:nth-child(3) {
+                        .cardParag {
+                            padding-bottom: 7rem;
+                        }
+                    }
+
+                    h3 {
+                        margin: 20px 0 0 0;
+                        text-align: center;
+                    }
+
+                    hr {
+                        width: 80%;
+                        margin: 10px auto 0 auto;
+                        text-align: left;
+                        border: 2px solid #E5E5E5;
+                    }
+
+                    p {
+                        margin: 0 10px 0 28px;
+                        text-align: left;
+                        font-style: normal;
+                        font-weight: normal;
+                        line-height: normal;
+                        font-size: 16px;
+                        color: #6D6D6D;
+                    }
+
+                    a.cardSvgButton {
+                        display: block;
+                        color: #557C8C;
+                        font-size: 15px;
+                        position: relative;
+                        margin: 10px auto;
+                        padding: 14px 28px;
+                        border-radius: 28px;
+                        -webkit-border-radius: 28px;
+                        -moz-border-radius: 28px;
+                        -ms-border-radius: 28px;
+                        -o-border-radius: 28px;
+                        position: relative;
+                        z-index: 0;
+                        font-style: normal;
+                        font-weight: normal;
+                        line-height: normal;
+                        text-align: center;
+                        text-decoration: none;
+
+                        .icon {
+                            position: absolute;
+                            top: 0px;
+                            left: 0px;
+                            height: 100%;
+                            width: 100%;
+                            z-index: -1;
+
+                            path {
+                                transition: opacity 0.4s ease;
+
+                                &:first-of-type {
+                                    fill: transparent;
+                                    stroke: url(#linearGradient-1);
+                                    stroke-width: 3;
+                                    opacity: 1;
+                                }
+
+                                &.icon--plain {
+                                    opacity: 0;
+                                    stroke: none;
+                                    stroke-width: 0;
+                                }
+                            }
+                        }
+
+                        &:hover {
+                            @include easeOut;
+
+                            path {
+                                &:first-of-type {
+                                    opacity: 0;
+                                }
+
+                                &.icon--plain {
+                                    opacity: 1;
+                                }
+                            }
+                        }
+                    }
                 }
             }
 
-            h2 {
-                font-size: 28px;
-            }
         }
 
 
-        section.two {
-            h2 {
-                font-size: 28px;
-            }
+        h2 {
+            font-size: 28px;
+        }
+    }
+
+
+    section.two {
+        h2 {
+            font-size: 28px;
+        }
+    }
+
+    .socials {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(130px, 1fr));
+        grid-gap: 15px;
+        text-align: center;
+        margin: 65px auto 0 auto;
+        justify-content: center;
+
+        .socialMedia {
+            margin: 1rem;
+
         }
 
-        .socials {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(130px, 1fr));
-            grid-gap: 15px;
-            justify-items: center;
-            text-align: center;
-            margin: 65px auto 0 auto;
-            justify-content: center;
-
-            .socialMedia {
-                margin: 1rem;
-
-            }
-
-            .roundedBorders {
-                font-size: 14px;
-                margin: 14px auto 0 auto;
-                padding: 7px 9px;
-                border: 1px solid #C4C4C4;
-                box-sizing: border-box;
-                border-radius: 30px;
-            }
+        .roundedBorders {
+            font-size: 14px;
+            margin: 14px auto 0 auto;
+            padding: 7px 9px;
+            border: 1px solid #C4C4C4;
+            box-sizing: border-box;
+            border-radius: 30px;
         }
+    }
 
-        section.three {
-            h2 {
-                font-size: 28px;
-            }
+    section.three {
+        h2 {
+            font-size: 28px;
         }
     }
 
@@ -462,7 +585,6 @@
                 margin: 1rem auto;
                 padding: 0;
                 text-align: center;
-                justify-items: center;
                 justify-content: center;
 
                 hr {
@@ -784,7 +906,6 @@
         display: grid;
         grid-template-columns: repeat(auto-fill, minmax(130px, 1fr));
         grid-gap: 15px;
-        justify-items: center;
         text-align: center;
         margin: 65px auto 0 auto;
         justify-content: center;
@@ -1173,6 +1294,347 @@
 
 @include mediaXXSm {
 
+    .menu-btn {
+        position: absolute;
+        z-index: 3;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: normal;
+        line-height: normal;
+        font-size: 16px;
+        cursor: pointer;
+        @include easeOut;
+
+        .btn-line {
+            width: 28px;
+            height: 3px;
+            margin: 0 0 5px 0;
+            background: black;
+            @include easeOut;
+        }
+
+        // rotate into x with menu lines
+        &.close {
+
+
+            .btn-line {
+
+                //Line 1 -rotate
+                &:nth-child(1) {
+                    transform: rotate(45deg) translate(5px, 5px);
+                }
+
+                //Line 2 -Hide
+                &:nth-child(2) {
+                    opacity: 0;
+                }
+
+                //Line 3 -rotate
+                &:nth-child(3) {
+                    transform: rotate(-45deg) translate(7px, -6px);
+                }
+            }
+        }
+    }
+
+    // Menu Overlay
+    .menu {
+        opacity: 0.9;
+        visibility: hidden;
+
+        &.show {
+            visibility: visible;
+            position: fixed;
+            z-index: 2;
+            height: auto;
+            margin-top: calc(100vh - 90vh);
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+        }
+
+        &-nav {
+            display: block;
+            text-align: center;
+            align-items: center;
+            justify-content: center;
+            float: none;
+            width: 100%;
+            height: auto;
+            overflow-x: hidden;
+        }
+
+        &-nav {
+            margin: 0;
+            padding: 0;
+            background: darken($primary-color, 5);
+            list-style: none;
+            transform: translate3d(0, -100%, 0);
+            @include easeOut;
+
+            &.show {
+                transform: translate3d(0, 0, 0);
+                -webkit-transform: translate3d(0, 0, 0);
+                -moz-transform: translate3d(0, 0, 0);
+                -ms-transform: translate3d(0, 0, 0);
+                -o-transform: translate3d(0, 0, 0);
+            }
+        }
+
+        .nav-item {
+            display: block;
+            padding: 15px;
+            transform: translate3d(600px, 0, 0);
+            @include easeOut;
+
+            &.show {
+                //slide from right
+                transform: translate3d(0, 0, 0);
+            }
+
+            &.current>a {
+                color: #72A5BA;
+            }
+        }
+
+        .nav-link {
+            display: inline-block;
+            position: relative;
+            font-size: 16px;
+            text-transform: uppercase;
+            padding: 1rem 0;
+            font-weight: 300;
+            color: white;
+            text-decoration: none;
+            @include easeOut;
+
+            &:hover {
+                color: lightgray;
+                transform: scale(1.1);
+            }
+        }
+    }
+
+    .headerImage {
+        display: block;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+
+        h1 {
+            padding-top: calc(100vh - 60vh);
+            margin: 0 0 2rem 0;
+            text-align: center;
+            float: none;
+            font-size: 48px;
+
+
+        }
+
+        a#svgButton {
+            position: relative;
+            padding: 23px 35px;
+            z-index: 0;
+            float: none;
+            font-style: normal;
+            font-weight: normal;
+            line-height: normal;
+            font-size: 26px;
+            text-align: center;
+            letter-spacing: 0.1em;
+            color: #AEE1F7;
+            text-decoration: none;
+            margin: 0 0 0 0;
+            border-radius: 35px;
+
+            .icon {
+                position: absolute;
+                top: 0px;
+                left: 0px;
+                height: 100%;
+                width: 100%;
+                z-index: -1;
+
+
+                path {
+                    transition: opacity 0.4s ease;
+
+                    &:first-of-type {
+                        fill: transparent;
+                        stroke: url(#linearGradient-1);
+                        stroke-width: 3;
+                        opacity: 1;
+                    }
+
+                    &.icon--plain {
+                        opacity: 0;
+                        stroke: none;
+                        stroke-width: 0;
+                    }
+                }
+            }
+
+            &:hover {
+                path {
+                    &:first-of-type {
+                        opacity: 0;
+                    }
+
+                    &.icon--plain {
+                        opacity: 1;
+                    }
+                }
+            }
+        }
+
+    }
+
+    section.one {
+
+        h2 {
+            font-size: 28px;
+        }
+
+        .threeCards {
+            margin: 1.5rem auto;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+            grid-gap: 20px;
+            justify-content: center;
+
+            .card {
+                display: block;
+                background-color: #ffffff;
+                margin: 1.5rem auto;
+                min-width: 290px;
+                max-width: 300px;
+                height: 400px;
+                box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.35);
+                border-radius: 50px;
+                color: #333333;
+                text-align: center;
+
+                &:nth-child(1) {
+                    .cardParag {
+                        padding-bottom: 4rem;
+                    }
+                }
+
+                &:nth-child(2) {
+                    .cardParag {
+                        padding-bottom: 0rem;
+                    }
+                }
+
+                &:nth-child(3) {
+                    .cardParag {
+                        padding-bottom: 7rem;
+                    }
+                }
+
+                h3 {
+                    margin: 10px 0 0 0;
+                    text-align: center;
+                }
+
+                hr {
+                    width: 80%;
+                    margin: 10px auto 0 auto;
+                    text-align: left;
+                    border: 2px solid #E5E5E5;
+                }
+
+                p {
+                    margin: 0 15px;
+                    text-align: left;
+                    font-style: normal;
+                    font-weight: normal;
+                    line-height: normal;
+                    font-size: 14px;
+                    color: #6D6D6D;
+                }
+
+                a.cardSvgButton {
+                    display: block;
+                    color: #557C8C;
+                    font-size: 15px;
+                    position: relative;
+                    margin: 10px auto;
+                    padding: 14px 28px;
+                    border-radius: 28px;
+                    -webkit-border-radius: 28px;
+                    -moz-border-radius: 28px;
+                    -ms-border-radius: 28px;
+                    -o-border-radius: 28px;
+                    position: relative;
+                    z-index: 0;
+                    font-style: normal;
+                    font-weight: normal;
+                    line-height: normal;
+                    text-align: center;
+                    text-decoration: none;
+
+                    .icon {
+                        position: absolute;
+                        top: 0px;
+                        left: 0px;
+                        height: 100%;
+                        width: 100%;
+                        z-index: -1;
+
+                        path {
+                            transition: opacity 0.4s ease;
+
+                            &:first-of-type {
+                                fill: transparent;
+                                stroke: url(#linearGradient-1);
+                                stroke-width: 3;
+                                opacity: 1;
+                            }
+
+                            &.icon--plain {
+                                opacity: 0;
+                                stroke: none;
+                                stroke-width: 0;
+                            }
+                        }
+                    }
+
+                    &:hover {
+                        @include easeOut;
+
+                        path {
+                            &:first-of-type {
+                                opacity: 0;
+                            }
+
+                            &.icon--plain {
+                                opacity: 1;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+
+    }
+
+
+    section.two {
+        h2 {
+            font-size: 28px;
+        }
+    }
+
+    footer {
+        text-align: center;
+
+
+    }
+
     .headerImage {
         h1 {
             font-size: 32px;
@@ -1361,26 +1823,21 @@
 
         .headerImage {
             h1 {
-                padding-top: calc(100vh - 90vh);
-                margin: 0 20px 0 0;
-                font-size: 32px;
+                padding-top: calc(100vh - 80vh);
+                margin: 0 50px 0 0;
+                font-size: 38px;
                 float: right;
                 text-align: left;
 
                 b {
-                    font-size: 38px;
+                    font-size: 40px;
                 }
             }
 
-
-
-
-
             a#svgButton {
-                margin: 10% 0 0 20px;
+                margin: 18% 0 0 60px;
                 position: relative;
                 z-index: 0;
-                float: left;
             }
 
         }
@@ -1531,10 +1988,6 @@
             float: right;
             text-align: left;
         }
-
-
-
-
 
         a#svgButton {
             margin: 18% 0 0 0;
