--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,5 @@
 @import "config";
+@import url('https://fonts.googleapis.com/css?family=Roboto');
 
 * {
     margin: 0;
@@ -25,7 +26,7 @@ body {
 h1 {
     font-family: $mainFont;
     font-style: normal;
-    font-weight: normal;
+    font-weight: 400;
     line-height: normal;
     font-size: 72px;
 }
@@ -110,7 +111,6 @@ header {
     position: relative;
     display: flex;
     padding: 10px;
-    justify-items: center;
     float: left;
     background: #FFFFFF;
     box-shadow: 0px 6px 25px rgba(0, 0, 0, 0.25);
@@ -251,31 +251,14 @@ main {
     text-align: center;
     margin: 1.5rem auto;
     justify-content: center;
-    align-items: center; // button.btn {
+    align-items: center;
 
-    //     border: 4PX solid #BC8CCD;
-    //     border-top-color: #BC8CCD;
-    //     border-bottom-color: #72A5BA;
-    //     display: block;
-    //     font-style: normal;
-    //     font-weight: normal;
-    //     line-height: normal;
-    //     text-align: center;
-    //     color: #557C8C;
-    //     text-decoration: none;
-    //     background: transparent;
-    //     margin: 0;
-    //     &:hover {
-    //         background: linear-gradient(to bottom, #BC8CCD 0%, #72A5BA 100%);
-    //         @include easeOut;
-    //     }
-    // }
     .threeCards {
         margin: 1.5rem auto auto 0;
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
         grid-gap: 20px;
-        justify-items: center;
+        justify-content: center;
 
         .card {
             display: block;
@@ -410,7 +393,6 @@ main {
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(130px, 1fr));
         grid-gap: 20px;
-        justify-items: center;
         text-align: center;
         margin: 65px auto 0 auto;
         justify-content: center;
@@ -434,7 +416,6 @@ main {
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
         grid-gap: 55px;
-        justify-items: center;
 
         .cardWithImages {
             background-color: #ffffff;
